<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OsmPoi</string>
    <string name="search">Search</string>
    <string name="Settings">Settings</string>
    <string name="Templates">Templates</string>
    <string name="Less">Less</string>
    <string name="More">Give me more</string>
	<string name="file_location">File location</string>
	<string name="no_search_source_configured">No search source configured</string>
	<string name="Accuracy">Accuracy:</string>
	<string name="NA">N/A</string>
	<string name="ID">ID</string>
	<string name="locate">Locate</string>
	<string name="follow">Follow GPS</string>
	<string name="Continue">Continue</string>
	<string name="cancel">Cancel</string>
	<string name="import_confirm">Importing will destroy previously imported data!</string>
	<string name="search_source">Search source</string>
	<string name="data_source">Data source</string>
	<string name="about">About</string>
	<string name="cant_create_search_source">Search source can not be selected</string>
	<string name="no_file_picker">No compatible file picker installed</string>
	<string name="ui">Interface</string>
	<string name="result_language">Preferred result language</string>
	<string name="search_source_summary">Change source for searching</string>
	<string name="stop_follow">Stop follow GPS</string>
	<string name="clear">Clear</string>
	<string name="search_again">Search again</string>
	<string name="search_finished">Search finished</string>
	<string name="search_cancelled">Search has been cancelled</string>
	<string name="imported_db">Imported DB</string>
	<string name="imported_db_summary">Search in local database created by importing OSM-extract file</string>
	<string name="pbf_file_summary">Local OSM extract file in PBF format</string>
	<string name="compact">Compact</string>
	<string name="service_name">OsmPoi file import service</string>
	<string name="select_pbf_file">Select PBF file</string>
	<string name="clean_db_confirm">This will destroy previously imported data!</string>
	<string name="custom_search">Custom search</string>
	<string name="cant_parse">Query can not be recognized</string>
	<string name="help">Help</string>
	<string name="copyrights">Copyrights</string>
	<string name="how_to_start">Download PBF file of your area from one of the following sites, and then perform import operation from the Settings menu.</string>
	<string name="loading">Loading…</string>
	<string name="category">Category</string>
	<string name="error">Error occurred</string>
	<string name="title">Title</string>
	<string name="place">Place</string>
    <plurals name="results_within" >
	    <item quantity="one">One result within %2$dm</item>
	    <item quantity="other">%1$d results within %2$dm</item>
	</plurals>
    <string name="about_map_icons">&lt;a href=\'http://mapicons.nicolasmollet.com\'&gt;Map Icons Collection&lt;/a&gt; by Nicolas Mollet&lt;br /&gt;&lt;a href=\'http://creativecommons.org/licenses/by-sa/3.0/\'&gt;Creative Commons 3.0 BY-SA&lt;/a&gt;</string>
	<string name="waiting_for_location">Waiting for location…</string>
	<string name="db_on_sdcard">Store DB on sdcard</string>
	<string name="db_on_sdcard_true">Database file will be stored on external storage</string>
	<string name="db_on_sdcard_false">Database file will be stored on internal storage</string>
	<string name="import_settings">Import Settings…</string>
	<string name="import_settings_summary">Customization of import process</string>
	<string name="import_pbf">Import PBF…</string>
	<string name="import_pbf_summary">Imports selected PBF file into local database</string>
</resources>